Adicionado title e atl

--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
 		img {
 			display: inline-block;
 			vertical-align: middle;
+			width: 420px;
+			height: 200px;
 		}
 	</style>
     </head>
     <body>
 	    <div>
-		    <img src="okd_logo.png">
+		    <img src="okd_logo.png" alt="OKD" title="Origin Kubernetes Distribution">
 	    </div>
     </body>
 </html>
